fix: overlapping rows in RAC Virtualizer docs table example

--- a/starters/docs/src/Table.css
+++ b/starters/docs/src/Table.css
@@ -143,7 +143,7 @@
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
 
-  &div {
+  div& {
     display: flex;
     align-items: center;
     height: 100%;
